[fix](ABC-1174): Fix expandable section content taking up white space when closed (#781)

--- a/src/modules/base/expandableSection/expandableSection.css
+++ b/src/modules/base/expandableSection/expandableSection.css
@@ -194,3 +194,11 @@
     cursor: auto !important;
     border: none !important;
 }
+
+.avonni-expandable-section__content {
+    display: none;
+}
+
+.slds-is-open .avonni-expandable-section__content {
+    display: block;
+}
